--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,10 @@
    font-weight: 300;
  }
 
- 
- 
  .ce-chat-list {
     background-color: #36393e !important;
+    overflow: hidden !important;
+    border-right: 2px solid #ffd166 !important;
   }
   
   .ce-chats-container {
@@ -52,7 +52,24 @@
   }
   
   .ce-settings {
-    background-color: rgb(240, 240, 240) !important;
+    background-color: #36393e !important;
+    border-left: 2px solid #ffd166 !important;
+  }
+
+
+
+  .ce-person-container {
+    background-color: lightgray;
+    margin-top: 4px;
+    border-radius: 8px;
+    padding: 4px;
+  }
+
+  .ce-person-title-container, .ce-photo-title-container  {
+    background-color: #36393e !important;
+    color: #ffd166;
+    border-bottom: 2px solid #ffd166;
+    border-top: none !important;
   }
   
   .ce-autocomplete-input {
@@ -81,6 +98,8 @@
   .ce-chat-feed-column {
     background-color: #36393e;
     padding: 2px !important;
+    border-left: 2px solid #ffd166;
+    border-right: 2px solid #ffd166;
   }
 
   .chat-feed {
@@ -88,6 +107,7 @@
     width: 100%;
     overflow: scroll;
     background-color: #36393e;
+    overflow: hidden !important;
   }
   
   .chat-title-container {
@@ -216,93 +236,4 @@
     font-size: 14px;
   }
   
-    /* FORM STYLES */
-  *,
-  *::after,
-  *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 62,5%;
-  }
   
-  .wrapper {
-    height: 100vh;
-      width: 100%;
-    background: rgb(117,84,160);
-    background: linear-gradient(90deg, rgba(117,84,160,1) 7%, rgba(117,84,160,1) 17%, rgba(106,95,168,1) 29%, rgba(99,103,174,1) 44%, rgba(87,116,184,1) 66%, rgba(70,135,198,1) 83%, rgba(44,163,219,1) 96%, rgba(22,188,237,1) 100%, rgba(0,212,255,1) 100%);  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .input {
-    color: #333;
-    font-size: 1.2rem;
-      margin: 0 auto;
-    padding: 1.5rem 2rem;
-    border-radius: 0.2rem;
-    background-color: rgb(255, 255, 255);
-    border: none;
-    width: 90%;
-    display: block;
-    border-bottom: 0.3rem solid transparent;
-    transition: all 0.3s;
-    outline: none;
-    margin-bottom: 25px;
-  }
-  
-  .form {
-    width: 400px;
-  }
-  
-  .title {
-    text-align: center;
-    color: white;
-    margin-bottom: 30px;
-    width: 100%;
-    font-size: 2.3em;;
-  }
-  
-  .button {
-    border-radius: 4px;
-    border: none;
-    background-color: white;
-    color: black;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 22px;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.4s;
-    cursor: pointer;
-    margin: 5px;
-    width: 90%;
-  }
-  .button span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.4s;
-  }
-  .button span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-  }
-  .button:hover span {
-    padding-right: 25px;
-  }
-  .button:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
-  
-  .error {
-    color: white;
-    text-align: center;
-    margin-top: 20px;
-  }
