--- a/src/App.css
+++ b/src/App.css
@@ -1,239 +1,239 @@
- *{
-   font-family: 'Fredoka', sans-serif;
-   font-weight: 300;
- }
+* {
+  font-family: "Fredoka", sans-serif;
+  font-weight: 300;
+}
 
- .ce-chat-list {
-    background-color: #36393e !important;
-    overflow: hidden !important;
-    border-right: 2px solid #ffd166 !important;
-  }
-  
-  .ce-chats-container {
-    background-color: #36393e !important;
-  }
-  
-  .ce-active-chat-card {
-    background-color: lightgrey !important;
-    border: 4px solid #36393e !important;
-    border-radius: 8px !important;
-    font-size: 18px;
-  }
-  
-  .ce-chat-subtitle-text {
-    color: #595959 !important;
-  }
-  
-  .ce-chat-form-container {
-    padding-bottom: 20px !important;
-    background-color: #36393e !important;
-    color: lightgrey;
-  }
-  
-  .ce-text-input {
-    border-radius: 6px !important;
-    border: 1px solid #3b2a50 !important;
-  }
-  
-  .ce-primary-button {
-    border-radius: 6px !important;
-    background-color: #ffd166 !important;
-    position: relative;
-    bottom: 1px;
-  }
+/* Chat Engine Specific Styles */
+.ce-chat-list {
+  background-color: #36393e !important;
+  overflow: hidden !important;
+  border-right: 2px solid #ffd166 !important;
+}
 
-  .ce-primary-button svg {
-    color: #36393e;
-  }
-  
-  .ce-danger-button {
-    background-color: white !important;
-    border-radius: 22px !important;
-  }
-  
-  .ce-settings {
-    background-color: #36393e !important;
-    border-left: 2px solid #ffd166 !important;
-  }
+.ce-chats-container {
+  background-color: #36393e !important;
+}
 
+.ce-active-chat-card {
+  background-color: lightgrey !important;
+  border: 4px solid #36393e !important;
+  border-radius: 8px !important;
+  font-size: 18px;
+}
 
+.ce-chat-subtitle-text {
+  color: #595959 !important;
+}
 
-  .ce-person-container {
-    background-color: lightgray;
-    margin-top: 4px;
-    border-radius: 8px;
-    padding: 4px;
-  }
+.ce-chat-form-container {
+  padding-bottom: 20px !important;
+  background-color: #36393e !important;
+  color: lightgrey;
+}
 
-  .ce-person-title-container, .ce-photo-title-container  {
-    background-color: #36393e !important;
-    color: #ffd166;
-    border-bottom: 2px solid #ffd166;
-    border-top: none !important;
-  }
-  
-  .ce-autocomplete-input {
-    border-radius: 6px !important;
-    border: 1px solid #3b2a50 !important;
-  }
-  
-  .ce-autocomplete-options {
-    border-radius: 6px !important;
-    border: 1px solid #3b2a50 !important;
-    background-color: white !important;
-  }
-  
-  .ce-chat-settings-container {
-    padding-top: 12px !important;
-  }
-  
-  .ce-chat-avatars-row {
-    display: none !important;
-  }
+.ce-text-input {
+  border-radius: 6px !important;
+  border: 1px solid #3b2a50 !important;
+}
 
-  .ce-chat-unread-dot {
-    background-color: #36393e !important;
-  }
+.ce-primary-button {
+  border-radius: 6px !important;
+  background-color: #ffd166 !important;
+  position: relative;
+  bottom: 1px;
+}
 
-  .ce-chat-feed-column {
-    background-color: #36393e;
-    padding: 2px !important;
-    border-left: 2px solid #ffd166;
-    border-right: 2px solid #ffd166;
-  }
+.ce-primary-button svg {
+  color: #36393e;
+}
 
-  .chat-feed {
-    height: 100%;
-    width: 100%;
-    overflow: scroll;
-    background-color: #36393e;
-    overflow: hidden !important;
-  }
-  
-  .chat-title-container {
-    width: calc(100% - 36px);
-    padding: 18px;
-    text-align: center;
-  }
-  
-  .chat-title {
-    color: #ffd166;
-    font-weight: 800;
-    font-size: 24px;
-  }
-  
-  .chat-subtitle {
-    color: lightgray;
-    font-size: 12px;
-    padding-top: 4px;
-  }
-  
-  .message-row {
-    float: left;
-    width: 100%;
-    display: flex;
-    margin-left: 18px;
-  }
-  
-  .message-block {
-    width: 100%;
-    display: inline-block;
-  }
-  
-  .message-avatar {
-    width: 44px;
-    height: 44px;
-    border-radius: 22px;
-    color: white;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 48px;
-  }
-  
-  .message {
-    padding: 12px;
-    font-size: 16px;
-    border-radius: 6px;
-    max-width: 60%;
-  }
-  
-  .message-image {
-    margin-right: 18px;
-    object-fit: cover;
-    border-radius: 6px;
-    height: 30vw;
-    /* width: 30vw; */
-    max-height: 200px;
-    max-width: 200px;
-    min-height: 100px;
-    min-width: 100px;
-  }
-  
-  .read-receipts {
-    position: relative;
-    bottom: 6px;
-  }
-  
-  .read-receipt {
-    width: 13px;
-    height: 13px;
-    border-radius: 13px;
-    margin: 1.5px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 14px;
-  }
-  
-  .message-form-container {
-    position: absolute;
-    bottom: 0px;
-    width: calc(100% - 36px);
-    padding: 18px;
-    background-color: rgb(240, 240, 240);
-  }
-  
-  .message-form {
-    overflow: hidden;
-    border-radius: 6px;
-    border: 1px solid #3b2a50;
-    background-color: white;
-  }
-  
-  .message-input {
-    height: 40px;
-    width: calc(100% - 132px);
-    background-color: white;
-    border: 1px solid white;
-    padding: 0px 18px;
-    outline: none;
-    font-size: 15px;
-  }
-  
-  .image-button {
-    cursor: pointer;
-    padding: 0px 12px;
-    height: 100%;
-  }
-  
-  .send-button {
-    height: 42px;
-    background-color: white;
-    border: 1px solid white;
-    padding: 0px 18px;
-    cursor: pointer;
-  }
-  
-  .send-icon {
-    top: 1px;
-    position: relative;
-    transform: rotate(-90deg);
-  }
-  
-  .picture-icon {
-    top: 1px;
-    position: relative;
-    font-size: 14px;
-  }
-  
-  
+.ce-danger-button {
+  background-color: white !important;
+  border-radius: 22px !important;
+}
+
+.ce-settings {
+  background-color: #36393e !important;
+  border-left: 2px solid #ffd166 !important;
+}
+
+.ce-person-container {
+  background-color: lightgray;
+  margin-top: 4px;
+  border-radius: 8px;
+  padding: 4px;
+}
+
+.ce-person-title-container,
+.ce-photo-title-container {
+  background-color: #36393e !important;
+  color: #ffd166;
+  border-bottom: 2px solid #ffd166;
+  border-top: none !important;
+}
+
+.ce-autocomplete-input {
+  border-radius: 6px !important;
+  border: 1px solid #3b2a50 !important;
+}
+
+.ce-autocomplete-options {
+  border-radius: 6px !important;
+  border: 1px solid #3b2a50 !important;
+  background-color: white !important;
+}
+
+.ce-chat-settings-container {
+  padding-top: 12px !important;
+}
+
+.ce-chat-avatars-row {
+  display: none !important;
+}
+
+.ce-chat-unread-dot {
+  background-color: #36393e !important;
+}
+
+.ce-chat-feed-column {
+  background-color: #36393e;
+  padding: 2px !important;
+  border-left: 2px solid #ffd166;
+  border-right: 2px solid #ffd166;
+}
+
+/* Custom Chat Engine Styles */
+
+.chat-feed {
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  background-color: #36393e;
+  overflow: hidden !important;
+}
+
+.chat-title-container {
+  width: calc(100% - 36px);
+  padding: 18px;
+  text-align: center;
+}
+
+.chat-title {
+  color: #ffd166;
+  font-weight: 800;
+  font-size: 24px;
+}
+
+.chat-subtitle {
+  color: lightgray;
+  font-size: 12px;
+  padding-top: 4px;
+}
+
+.message-row {
+  float: left;
+  width: 100%;
+  display: flex;
+  margin-left: 18px;
+}
+
+.message-block {
+  width: 100%;
+  display: inline-block;
+}
+
+.message-avatar {
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+  color: white;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 48px;
+}
+
+.message {
+  padding: 12px;
+  font-size: 16px;
+  border-radius: 6px;
+  max-width: 60%;
+}
+
+.message-image {
+  margin-right: 18px;
+  object-fit: cover;
+  border-radius: 6px;
+  height: 30vw;
+  /* width: 30vw; */
+  max-height: 200px;
+  max-width: 200px;
+  min-height: 100px;
+  min-width: 100px;
+}
+
+.read-receipts {
+  position: relative;
+  bottom: 6px;
+}
+
+.read-receipt {
+  width: 13px;
+  height: 13px;
+  border-radius: 13px;
+  margin: 1.5px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14px;
+}
+
+.message-form-container {
+  position: absolute;
+  bottom: 0px;
+  width: calc(100% - 38px);
+  padding: 18px;
+  background-color: #36393e;
+}
+
+.message-form {
+  overflow: hidden;
+  border-radius: 6px;
+  border: 1px solid #ffd166;
+  background-color: white;
+}
+
+.message-input {
+  height: 40px;
+  width: calc(100% - 132px);
+  background-color: white;
+  border: 1px solid white;
+  padding: 0px 18px;
+  outline: none;
+  font-size: 15px;
+}
+
+.image-button {
+  cursor: pointer;
+  padding: 0px 12px;
+  height: 100%;
+}
+
+.send-button {
+  height: 42px;
+  background-color: white;
+  border: 1px solid white;
+  padding: 0px 18px;
+  cursor: pointer;
+}
+
+.send-icon {
+  top: 1px;
+  position: relative;
+  transform: rotate(-90deg);
+}
+
+.picture-icon {
+  top: 1px;
+  position: relative;
+  font-size: 14px;
+}
